// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RideListHandler when at / 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          type="submit"
          value="Request a ride"
        />
        <div
          className="backdrop"
        />
      </div>
      <div
        className="FormInput"
      >
        <div
          className="FormError"
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
        <radiogroup
          className="modeSwitch"
        >
          <label
            className="modeButton request"
            title="Request rides"
          >
            <input
              checked={true}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button request"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
          <label
            className="modeButton offer"
            title="Offer rides"
          >
            <input
              checked={false}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button offer"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
        </radiogroup>
      </div>
    </div>
    <div
      className="headerBottom"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
  </form>
</header>
`;

exports[`RideListHandler when at /?departlocation=foo&arrivelocation=bar 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          type="submit"
          value="Request a ride"
        />
        <div
          className="backdrop"
        />
      </div>
      <div
        className="FormInput"
      >
        <div
          className="FormError"
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
        <radiogroup
          className="modeSwitch"
        >
          <label
            className="modeButton request"
            title="Request rides"
          >
            <input
              checked={true}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button request"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
          <label
            className="modeButton offer"
            title="Offer rides"
          >
            <input
              checked={false}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button offer"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
        </radiogroup>
      </div>
    </div>
    <div
      className="headerBottom"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
  </form>
</header>
`;

exports[`RideListHandler when at /?mode=offer 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          type="submit"
          value="Offer a ride"
        />
        <div
          className="backdrop"
        />
      </div>
      <div
        className="FormInput"
      >
        <div
          className="FormError"
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
        <radiogroup
          className="modeSwitch"
        >
          <label
            className="modeButton request"
            title="Request rides"
          >
            <input
              checked={false}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button request"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
          <label
            className="modeButton offer"
            title="Offer rides"
          >
            <input
              checked={true}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button offer"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
        </radiogroup>
      </div>
    </div>
    <div
      className="headerBottom"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
  </form>
</header>
`;

exports[`RideListHandler when at /?mode=request 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          type="submit"
          value="Request a ride"
        />
        <div
          className="backdrop"
        />
      </div>
      <div
        className="FormInput"
      >
        <div
          className="FormError"
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
        <radiogroup
          className="modeSwitch"
        >
          <label
            className="modeButton request"
            title="Request rides"
          >
            <input
              checked={true}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button request"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
          <label
            className="modeButton offer"
            title="Offer rides"
          >
            <input
              checked={false}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button offer"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg />
            </div>
          </label>
        </radiogroup>
      </div>
    </div>
    <div
      className="headerBottom"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
  </form>
</header>
`;

exports[`RideListHandler when at /search 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={true}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=undefined"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when at /search?mode=offer 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={true}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=offer"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when at /search?mode=offer&arriveLocation=bar 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=offer"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value="bar"
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when at /search?mode=offer&departLocation=foo&arriveLocation=bar 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          value="foo"
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=offer"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value="bar"
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when at /search?mode=request 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={true}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=request"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when at /search?mode=request&departLocation=foo 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          value="foo"
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=request"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;
